// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step1 creating should render a create form 1`] = `
<Fragment>
  <EuiPanel>
    <ManageEmailAction
      createEmailAction={[Function]}
      isNew={true}
    />
  </EuiPanel>
</Fragment>
`;

exports[`Step1 editing should allow for editing 1`] = `
<Fragment>
  <EuiText>
    <p>
      Edit the action below.
    </p>
  </EuiText>
  <EuiSpacer />
  <ManageEmailAction
    action={
      Object {
        "actionTypeId": "1abc",
        "config": Object {},
        "name": "Testing",
        "id": "1",
      }
    }
    cancel={[Function]}
    createEmailAction={[Function]}
    isNew={false}
  />
</Fragment>
`;

exports[`Step1 should render normally 1`] = `
<Fragment>
  <EuiSuperSelect
    compressed={false}
    fullWidth={false}
    hasDividers={true}
    isInvalid={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "dropdownDisplay": <EuiText>
            From: , Service:
          </EuiText>,
          "inputDisplay": <EuiText>
            From: , Service:
          </EuiText>,
          "value": "1",
        },
        Object {
          "dropdownDisplay": <EuiText>
            Create new email action...
          </EuiText>,
          "inputDisplay": <EuiText>
            Create new email action...
          </EuiText>,
          "value": "__new__",
        },
      ]
    }
    valueOfSelected="1"
  />
  <EuiSpacer />
  <EuiFlexGroup>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        iconType="pencil"
        onClick={[Function]}
        size="s"
      >
        Edit
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        iconType="play"
        isDisabled={false}
        isLoading={false}
        onClick={[Function]}
        size="s"
      >
        Test
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        color="danger"
        iconType="trash"
        isLoading={false}
        onClick={[Function]}
        size="s"
      >
        Delete
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`Step1 testing should should a tooltip if there is no email address 1`] = `
<EuiToolTip
  content="Please configure an email address below to test this action."
  delay="regular"
  position="top"
>
  <EuiButton
    iconType="play"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    size="s"
  >
    Test
  </EuiButton>
</EuiToolTip>
`;

exports[`Step1 testing should show a failed test error 1`] = `
<Fragment>
  <EuiSuperSelect
    compressed={false}
    fullWidth={false}
    hasDividers={true}
    isInvalid={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "dropdownDisplay": <EuiText>
            From: , Service:
          </EuiText>,
          "inputDisplay": <EuiText>
            From: , Service:
          </EuiText>,
          "value": "1",
        },
        Object {
          "dropdownDisplay": <EuiText>
            Create new email action...
          </EuiText>,
          "inputDisplay": <EuiText>
            Create new email action...
          </EuiText>,
          "value": "__new__",
        },
      ]
    }
    valueOfSelected="1"
  />
  <EuiSpacer />
  <EuiFlexGroup>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        iconType="pencil"
        onClick={[Function]}
        size="s"
      >
        Edit
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        iconType="play"
        isDisabled={false}
        isLoading={false}
        onClick={[Function]}
        size="s"
      >
        Test
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        color="danger"
        iconType="trash"
        isLoading={false}
        onClick={[Function]}
        size="s"
      >
        Delete
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiCallOut
    color="danger"
    iconType="alert"
    title="Unable to send test email. Please double check your email configuration."
  >
    <p>
      Very detailed error message
    </p>
  </EuiCallOut>
</Fragment>
`;

exports[`Step1 testing should show a successful test 1`] = `
<Fragment>
  <EuiSuperSelect
    compressed={false}
    fullWidth={false}
    hasDividers={true}
    isInvalid={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "dropdownDisplay": <EuiText>
            From: , Service:
          </EuiText>,
          "inputDisplay": <EuiText>
            From: , Service:
          </EuiText>,
          "value": "1",
        },
        Object {
          "dropdownDisplay": <EuiText>
            Create new email action...
          </EuiText>,
          "inputDisplay": <EuiText>
            Create new email action...
          </EuiText>,
          "value": "__new__",
        },
      ]
    }
    valueOfSelected="1"
  />
  <EuiSpacer />
  <EuiFlexGroup>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        iconType="pencil"
        onClick={[Function]}
        size="s"
      >
        Edit
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        iconType="play"
        isDisabled={false}
        isLoading={false}
        onClick={[Function]}
        size="s"
      >
        Test
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        color="danger"
        iconType="trash"
        isLoading={false}
        onClick={[Function]}
        size="s"
      >
        Delete
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiText
    color="secondary"
  >
    <p>
      Looks good on our end!
    </p>
  </EuiText>
</Fragment>
`;
